[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "causalflow-rust"
version = "0.1.0"
description = "High-performance Causal Inference engine powered by Rust"
authors = [
    { name = "CausalFlow Contributors" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["causal-inference", "rust", "machine-learning", "ite"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/taka-data/CausalFlow"
Repository = "https://github.com/taka-data/CausalFlow"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "causalflow._causalflow"
manifest-path = "py-causalflow/Cargo.toml"
python-source = "py-causalflow"
# Include the type stub file
include = ["causalflow/causalflow.pyi"]
