[package]
name = "causalflow-core"
version = "0.1.4"
edition = "2021"
description = "Core engine for CausalFlow"
license = "MIT"
repository = "https://github.com/taka-data/CausalFlow"

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"
pyo3 = { version = "0.20", optional = true }

[features]
python = ["pyo3"]
