[package]
name = "causalflow-macros"
version = "0.1.6"
edition = "2021"
description = "Macros for CausalFlow"
license = "MIT"
repository = "https://github.com/taka-data/CausalFlow"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
